começo de aplicação de react

--- a/pages/notas1.html
+++ b/pages/notas1.html
@@ -11,7 +11,7 @@
       <img src="/frontend/src/assets/Group 6.svg" alt="menu" />
       <img src="/frontend/src/assets/Group 1 1.svg" alt="logo" />
       <img
-        src="/frontend/src/assets/search_FILL0_wght400_GRAD0_opsz24 1.svg"
+        src="/frontend/src/assets/lupa.svg"
         alt="busca"
       />
       <img src="/frontend/src/assets/Ellipse 1.svg" alt="cano" />
