--- a/pages/notas2.html
+++ b/pages/notas2.html
@@ -10,7 +10,7 @@
     <header class="navbar">
       <img src="../img/Group 6.svg" alt="menu" />
       <img src="../img/Group 1 1.svg" alt="logo" />
-      <img src="../img/search_FILL0_wght400_GRAD0_opsz24 1.svg" alt="busca" />
+      <img src="../img/lupa.svg" alt="busca" />
       <img src="../img/Ellipse 1.svg" alt="cano" />
     </header>
 
