--- a/pages/notas1.html
+++ b/pages/notas1.html
@@ -10,10 +10,7 @@
     <header class="navbar">
       <img src="/frontend/src/assets/Group 6.svg" alt="menu" />
       <img src="/frontend/src/assets/Group 1 1.svg" alt="logo" />
-      <img
-        src="/frontend/src/assets/lupa.svg"
-        alt="busca"
-      />
+      <img src="/frontend/src/assets/lupa.svg" alt="busca" />
       <img src="/frontend/src/assets/Ellipse 1.svg" alt="cano" />
     </header>
 
