continuando a codar o react (botoes, jogador e partida)

--- a/pages/notas1.html
+++ b/pages/notas1.html
@@ -62,8 +62,10 @@
           </h2>
         </div>
         <div class="info-n">
+          <div class="nota1">
           <h2>Dê sua nota</h2>
-          <h2>--/10</h2>
+          <h2> <input class="nota" type="text" placeholder="--">/10</h2>
+        </div>
         </div>
       </div>
 
