componente jogador pronto + erros gerais corrigidos

--- a/pages/notas1.html
+++ b/pages/notas1.html
@@ -13,7 +13,17 @@
       <img src="/frontend/src/assets/lupa.svg" alt="busca" />
       <img src="/frontend/src/assets/Ellipse 1.svg" alt="cano" />
     </header>
-
+    <!-- /* .titulo {
+      margin-top: 1.875rem;
+      margin-left: 0.938rem;
+      font-family: "Roboto Flex", Arial, sans-seriff;
+      font-weight: 600;
+    } */
+    
+    /* .titulo-jogadores-time1 {
+      display: flex;
+      justify-content: space-between;
+    } */ -->
     <div class="titulo-jogadores-time1">
       <h1 class="titulo">jogadores do Al-mossar</h1>
       <img src="/frontend/src/assets/Group 2.svg" alt="almosso" />
@@ -63,9 +73,9 @@
         </div>
         <div class="info-n">
           <div class="nota1">
-          <h2>Dê sua nota</h2>
-          <h2> <input class="nota" type="text" placeholder="--">/10</h2>
-        </div>
+            <h2>Dê sua nota</h2>
+            <h2><input class="nota" type="text" placeholder="--" />/10</h2>
+          </div>
         </div>
       </div>
 
